@@ -1,3 +1,8 @@
+2014-11-04  Jason Merrill  <jason@redhat.com>
+
+	* lib/g++-dg.exp (g++-dg-runtest): Change -std=c++1y to -std=c++14.
+	* lib/target-supports.exp (check_effective_target_c++14_only): Likewise.
+
 2014-11-04  Andrew Stubbs  <ams@codesourcery.com>
 
 	gcc/testsuite/
